prod/argo-workflows/start-chal-v2/challenge-02.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${CHALLENGE_NAME}
  labels:
    ctf/temporary: "${IS_TEMPORARY}"
    ctf/expireAfter: "${CHALLENGE_TIMEOUT}"
    ctf/kind: "challenge"
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${CHALLENGE_NAME}
  name: ${CHALLENGE_NAME}-svc
  labels:
    ctf/kind: "challenge"
spec:
  type: NodePort
  selector:
    app: ${CHALLENGE_NAME}
  ports:
    - name: tcp-challenge-nodeport
      protocol: TCP
      port: 3333
      targetPort: ${CONTAINER_PORT}
